apps/arr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: arr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.dozydelta.com`)
      kind: Rule
      middlewares:
        - name: ak-outpost-arr
          namespace: authentik
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: dozydelta-wildcard-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: arr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.dozydelta.com`)
      kind: Rule
      middlewares:
        - name: ak-outpost-arr
          namespace: authentik
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: dozydelta-wildcard-tls
